--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,6 @@ dependencies {
 
     // Client for retrieving location
     implementation "com.google.android.gms:play-services-location:$version_play_services"
+
+    implementation 'com.android.volley:volley:1.1.1'
 }
