--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,5 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:$version_play_services"
 
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
