--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         version_kotlin = "1.3.21"
         version_kotlin_coroutines = "1.1.0"
         version_lifecycle_extensions = "2.0.0"
+        version_room = "2.0.0"
         version_moshi = "1.8.0"
         version_navigation = "1.0.0"
         version_constraint_layout = "2.0.0-alpha3"
