--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,17 @@ dependencies {
     // Client for retrieving location
     implementation "com.google.android.gms:play-services-location:$version_play_services"
 
+    //Volley for HTTP Requests
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Room and Lifecycle dependencies
+    implementation "androidx.room:room-runtime:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
+    implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
+
+    // Testing
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
