--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     }
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.caseytmorris.orroifttt"
+        applicationId "com.caseytmorris.sparkdirector"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
