--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,10 +1,10 @@
 main:
-  - title: "Configuration"
-    url: "/configuration"
-  - title: "Vendors"
-    url: "/"
-  - title: "About"
-    url: "/"
-  - title: "Support"
-    url: "/"
+  - title: "Setup"
+    url: "/setup"
+  # - title: "Vendors"
+  #   url: "/"
+  # - title: "About"
+  #   url: "/"
+  # - title: "Support"
+  #   url: "/"
 
