--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 29
     dataBinding {
@@ -100,4 +102,13 @@ dependencies {
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Firebase stuff
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
+    implementation "com.google.firebase:firebase-auth:19.3.1"
+    implementation "com.firebaseui:firebase-ui-auth:$version_firebase_ui"
+
+    implementation "com.google.firebase:firebase-database:19.3.0"
+    implementation "com.firebaseui:firebase-ui-database:$version_firebase_ui"
 }
