--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation "com.google.android.material:material:$version_material"
 
     // Client for retrieving location
-    implementation "com.google.android.gms:play-services-location:$version_play_services"
+    implementation "com.google.android.gms:play-services-location:$version_play_services_loc"
 
     //Volley for HTTP Requests
     implementation 'com.android.volley:volley:1.1.1'
@@ -108,6 +108,7 @@ dependencies {
 
     implementation "com.google.firebase:firebase-auth:19.3.1"
     implementation "com.firebaseui:firebase-ui-auth:$version_firebase_ui"
+    implementation "com.google.android.gms:play-services-auth:$version_play_services_auth"
 
     implementation "com.google.firebase:firebase-database:19.3.0"
     implementation "com.firebaseui:firebase-ui-database:$version_firebase_ui"
