--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ buildscript {
         version_retrofit_coroutines_adapter = "0.9.2"
         version_recyclerview = "1.1.0-alpha03"
         version_material = "1.2.0-alpha06"
-        version_play_services = "16.0.0"
+        version_play_services_loc = "16.0.0"
+        version_play_services_auth = "18.0.0"
         version_google_services = "4.3.3"
         version_firebase_ui = "6.2.1"
     }
